Fix portrait image overflowed landscape screen

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -48,6 +48,7 @@ header button:hover {
 }
 
 img {
+  max-height: 100%;
   max-width: 100%;
 }
 
